lab1/.backup/GrammarTree.output
Grammar

    0 $accept: Program $end

    1 Program: ClassDef
    2        | Program ClassDef

    3 VariableDef: Variable SPSEMICOLON

    4 Variable: Type IDENTIFIER

    5 Type: TYPEINTEGER
    6     | TYPEFLOAT
    7     | TYPEBOOL
    8     | TYPESTRING
    9     | TYPEVOID
   10     | KEYCLASS IDENTIFIER
   11     | Type OPLEFTBRACKET OPRIGHTBRACKET

   12 Variables: Variable
   13          | Variables SPCOMMA Variable

   14 Formals: %empty
   15        | Variables

   16 FunctionDef: Type IDENTIFIER OPLEFTPRNT Formals OPRIGHTPRNT StmtBlock
   17            | KEYSTATIC Type IDENTIFIER OPLEFTPRNT Formals OPRIGHTPRNT StmtBlock

   18 ClassDef: KEYCLASS IDENTIFIER SPLEFTBRACE Fields SPRIGHTBRACE
   19         | KEYCLASS IDENTIFIER KEYEXTENDS IDENTIFIER SPLEFTBRACE Fields SPRIGHTBRACE

   20 Fields: %empty
   21       | Fields Field

   22 Field: VariableDef
   23      | FunctionDef

   24 StmtBlock: SPLEFTBRACE Stmts SPRIGHTBRACE

   25 Stmts: %empty
   26      | Stmts Stmt

   27 Stmt: VariableDef
   28     | SimpleStmt SPSEMICOLON
   29     | IfStmt
   30     | WhileStmt
   31     | ForStmt
   32     | BreakStmt SPSEMICOLON
   33     | ReturnStmt SPSEMICOLON
   34     | PrintStmt SPSEMICOLON
   35     | StmtBlock

   36 SimpleStmt: %empty
   37           | LValue OPASSIGN Expr
   38           | Call

   39 LValue: IDENTIFIER
   40       | Expr SPDOT IDENTIFIER
   41       | Expr OPLEFTBRACKET Expr OPRIGHTBRACKET

   42 Call: IDENTIFIER OPLEFTPRNT Actuals OPRIGHTPRNT
   43     | Expr SPDOT IDENTIFIER OPLEFTPRNT Actuals OPRIGHTPRNT

   44 Actuals: %empty
   45        | Exprs

   46 Exprs: Expr
   47      | Exprs SPCOMMA Expr

   48 ForStmt: KEYFOR OPLEFTPRNT SimpleStmt SPSEMICOLON BoolExpr SPSEMICOLON SimpleStmt OPRIGHTPRNT Stmt

   49 WhileStmt: KEYWHILE OPLEFTPRNT BoolExpr OPRIGHTPRNT Stmt

   50 IfStmt: KEYIF OPLEFTPRNT BoolExpr OPRIGHTPRNT Stmt
   51       | KEYIF OPLEFTPRNT BoolExpr OPRIGHTPRNT Stmt KEYELSE Stmt

   52 ReturnStmt: KEYRETURN
   53           | KEYRETURN Expr

   54 BreakStmt: KEYBREAK

   55 PrintStmt: KEYPRINT OPLEFTPRNT Exprs OPRIGHTPRNT

   56 BoolExpr: Expr

   57 Expr: Constant
   58     | LValue
   59     | KEYTHIS
   60     | Call
   61     | OPLEFTPRNT Expr OPRIGHTPRNT
   62     | Expr OPPLUS Expr
   63     | Expr OPMINUS Expr
   64     | Expr OPMULTIPLY Expr
   65     | Expr OPDIVIDE Expr
   66     | OPMINUS Expr
   67     | Expr OPLIGHT Expr
   68     | Expr OPLIGHTEQ Expr
   69     | Expr OPGREAT Expr
   70     | Expr OPGREATEQ Expr
   71     | Expr OPEQUAL Expr
   72     | Expr OPNOTEQUAL Expr
   73     | Expr OPAND Expr
   74     | Expr OPOR Expr
   75     | OPNOT Expr
   76     | KEYREADINTEGER OPLEFTPRNT OPRIGHTPRNT
   77     | KEYREADLINE OPLEFTPRNT OPRIGHTPRNT
   78     | KEYNEW IDENTIFIER OPLEFTPRNT OPRIGHTPRNT
   79     | KEYNEW Type OPLEFTBRACKET Expr OPRIGHTBRACKET
   80     | KEYINSTANCEOF OPLEFTPRNT Expr SPCOMMA IDENTIFIER OPRIGHTPRNT
   81     | OPLEFTPRNT KEYCLASS IDENTIFIER OPRIGHTPRNT Expr

   82 Constant: CONSTANTINTD
   83         | CONSTANTINTH
   84         | CONSTANTFLOAT
   85         | CONSTANTFLOATSC
   86         | CONSTANTBOOL
   87         | CONSTANTSTRING
   88         | CONSTANTNULL


Terminals, with rules where they appear

$end (0) 0
error (256)
SPSEMICOLON (258) 3 28 32 33 34 48
SPCOMMA (259) 13 47 80
SPDOT (260) 40 43
SPLEFTBRACE (261) 18 19 24
SPRIGHTBRACE (262) 18 19 24
OPLEFTPRNT (263) 16 17 42 43 48 49 50 51 55 61 76 77 78 80 81
OPRIGHTPRNT (264) 16 17 42 43 48 49 50 51 55 61 76 77 78 80 81
OPLEFTBRACKET (265) 11 41 79
OPRIGHTBRACKET (266) 11 41 79
OPPLUS (267) 62
OPMINUS (268) 63 66
OPMULTIPLY (269) 64
OPDIVIDE (270) 65
OPASSIGN (271) 37
OPAND (272) 73
OPOR (273) 74
OPNOT (274) 75
OPEQUAL (275) 71
OPNOTEQUAL (276) 72
OPGREAT (277) 69
OPLIGHT (278) 67
OPGREATEQ (279) 70
OPLIGHTEQ (280) 68
TYPEVOID (281) 9
TYPEINTEGER (282) 5
TYPEFLOAT (283) 6
TYPEBOOL (284) 7
TYPESTRING (285) 8
KEYCLASS (286) 10 18 19 81
KEYNEW (287) 78 79
KEYEXTENDS (288) 19
KEYTHIS (289) 59
KEYINSTANCEOF (290) 80
KEYIF (291) 50 51
KEYELSE (292) 51
KEYFOR (293) 48
KEYWHILE (294) 49
KEYBREAK (295) 54
KEYRETURN (296) 52 53
KEYSTATIC (297) 17
KEYPRINT (298) 55
KEYREADINTEGER (299) 76
KEYREADLINE (300) 77
CONSTANTNULL (301) 88
CONSTANTBOOL (302) 86
CONSTANTINTD (303) 82
CONSTANTINTH (304) 83
CONSTANTFLOAT (305) 84
CONSTANTFLOATSC (306) 85
CONSTANTSTRING (307) 87
IDENTIFIER (308) 4 10 16 17 18 19 39 40 42 43 78 80 81
LOWER_THAN_ELSE (309)


Nonterminals, with rules where they appear

$accept (55)
    on left: 0
Program (56)
    on left: 1 2, on right: 0 2
VariableDef (57)
    on left: 3, on right: 22 27
Variable (58)
    on left: 4, on right: 3 12 13
Type (59)
    on left: 5 6 7 8 9 10 11, on right: 4 11 16 17 79
Variables (60)
    on left: 12 13, on right: 13 15
Formals (61)
    on left: 14 15, on right: 16 17
FunctionDef (62)
    on left: 16 17, on right: 23
ClassDef (63)
    on left: 18 19, on right: 1 2
Fields (64)
    on left: 20 21, on right: 18 19 21
Field (65)
    on left: 22 23, on right: 21
StmtBlock (66)
    on left: 24, on right: 16 17 35
Stmts (67)
    on left: 25 26, on right: 24 26
Stmt (68)
    on left: 27 28 29 30 31 32 33 34 35, on right: 26 48 49 50 51
SimpleStmt (69)
    on left: 36 37 38, on right: 28 48
LValue (70)
    on left: 39 40 41, on right: 37 58
Call (71)
    on left: 42 43, on right: 38 60
Actuals (72)
    on left: 44 45, on right: 42 43
Exprs (73)
    on left: 46 47, on right: 45 47 55
ForStmt (74)
    on left: 48, on right: 31
WhileStmt (75)
    on left: 49, on right: 30
IfStmt (76)
    on left: 50 51, on right: 29
ReturnStmt (77)
    on left: 52 53, on right: 33
BreakStmt (78)
    on left: 54, on right: 32
PrintStmt (79)
    on left: 55, on right: 34
BoolExpr (80)
    on left: 56, on right: 48 49 50 51
Expr (81)
    on left: 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74
    75 76 77 78 79 80 81, on right: 37 40 41 43 46 47 53 56 61 62 63
    64 65 66 67 68 69 70 71 72 73 74 75 79 80 81
Constant (82)
    on left: 82 83 84 85 86 87 88, on right: 57


State 0

    0 $accept: . Program $end

    KEYCLASS  shift, and go to state 1

    Program   go to state 2
    ClassDef  go to state 3


State 1

   18 ClassDef: KEYCLASS . IDENTIFIER SPLEFTBRACE Fields SPRIGHTBRACE
   19         | KEYCLASS . IDENTIFIER KEYEXTENDS IDENTIFIER SPLEFTBRACE Fields SPRIGHTBRACE

    IDENTIFIER  shift, and go to state 4


State 2

    0 $accept: Program . $end
    2 Program: Program . ClassDef

    $end      shift, and go to state 5
    KEYCLASS  shift, and go to state 1

    ClassDef  go to state 6


State 3

    1 Program: ClassDef .

    $default  reduce using rule 1 (Program)


State 4

   18 ClassDef: KEYCLASS IDENTIFIER . SPLEFTBRACE Fields SPRIGHTBRACE
   19         | KEYCLASS IDENTIFIER . KEYEXTENDS IDENTIFIER SPLEFTBRACE Fields SPRIGHTBRACE

    SPLEFTBRACE  shift, and go to state 7
    KEYEXTENDS   shift, and go to state 8


State 5

    0 $accept: Program $end .

    $default  accept


State 6

    2 Program: Program ClassDef .

    $default  reduce using rule 2 (Program)


State 7

   18 ClassDef: KEYCLASS IDENTIFIER SPLEFTBRACE . Fields SPRIGHTBRACE

    $default  reduce using rule 20 (Fields)

    Fields  go to state 9


State 8

   19 ClassDef: KEYCLASS IDENTIFIER KEYEXTENDS . IDENTIFIER SPLEFTBRACE Fields SPRIGHTBRACE

    IDENTIFIER  shift, and go to state 10


State 9

   18 ClassDef: KEYCLASS IDENTIFIER SPLEFTBRACE Fields . SPRIGHTBRACE
   21 Fields: Fields . Field

    SPRIGHTBRACE  shift, and go to state 11
    TYPEVOID      shift, and go to state 12
    TYPEINTEGER   shift, and go to state 13
    TYPEFLOAT     shift, and go to state 14
    TYPEBOOL      shift, and go to state 15
    TYPESTRING    shift, and go to state 16
    KEYCLASS      shift, and go to state 17
    KEYSTATIC     shift, and go to state 18

    VariableDef  go to state 19
    Variable     go to state 20
    Type         go to state 21
    FunctionDef  go to state 22
    Field        go to state 23


State 10

   19 ClassDef: KEYCLASS IDENTIFIER KEYEXTENDS IDENTIFIER . SPLEFTBRACE Fields SPRIGHTBRACE

    SPLEFTBRACE  shift, and go to state 24


State 11

   18 ClassDef: KEYCLASS IDENTIFIER SPLEFTBRACE Fields SPRIGHTBRACE .

    $default  reduce using rule 18 (ClassDef)


State 12

    9 Type: TYPEVOID .

    $default  reduce using rule 9 (Type)


State 13

    5 Type: TYPEINTEGER .

    $default  reduce using rule 5 (Type)


State 14

    6 Type: TYPEFLOAT .

    $default  reduce using rule 6 (Type)


State 15

    7 Type: TYPEBOOL .

    $default  reduce using rule 7 (Type)


State 16

    8 Type: TYPESTRING .

    $default  reduce using rule 8 (Type)


State 17

   10 Type: KEYCLASS . IDENTIFIER

    IDENTIFIER  shift, and go to state 25


State 18

   17 FunctionDef: KEYSTATIC . Type IDENTIFIER OPLEFTPRNT Formals OPRIGHTPRNT StmtBlock

    TYPEVOID     shift, and go to state 12
    TYPEINTEGER  shift, and go to state 13
    TYPEFLOAT    shift, and go to state 14
    TYPEBOOL     shift, and go to state 15
    TYPESTRING   shift, and go to state 16
    KEYCLASS     shift, and go to state 17

    Type  go to state 26


State 19

   22 Field: VariableDef .

    $default  reduce using rule 22 (Field)


State 20

    3 VariableDef: Variable . SPSEMICOLON

    SPSEMICOLON  shift, and go to state 27


State 21

    4 Variable: Type . IDENTIFIER
   11 Type: Type . OPLEFTBRACKET OPRIGHTBRACKET
   16 FunctionDef: Type . IDENTIFIER OPLEFTPRNT Formals OPRIGHTPRNT StmtBlock

    OPLEFTBRACKET  shift, and go to state 28
    IDENTIFIER     shift, and go to state 29


State 22

   23 Field: FunctionDef .

    $default  reduce using rule 23 (Field)


State 23

   21 Fields: Fields Field .

    $default  reduce using rule 21 (Fields)


State 24

   19 ClassDef: KEYCLASS IDENTIFIER KEYEXTENDS IDENTIFIER SPLEFTBRACE . Fields SPRIGHTBRACE

    $default  reduce using rule 20 (Fields)

    Fields  go to state 30


State 25

   10 Type: KEYCLASS IDENTIFIER .

    $default  reduce using rule 10 (Type)


State 26

   11 Type: Type . OPLEFTBRACKET OPRIGHTBRACKET
   17 FunctionDef: KEYSTATIC Type . IDENTIFIER OPLEFTPRNT Formals OPRIGHTPRNT StmtBlock

    OPLEFTBRACKET  shift, and go to state 28
    IDENTIFIER     shift, and go to state 31


State 27

    3 VariableDef: Variable SPSEMICOLON .

    $default  reduce using rule 3 (VariableDef)


State 28

   11 Type: Type OPLEFTBRACKET . OPRIGHTBRACKET

    OPRIGHTBRACKET  shift, and go to state 32


State 29

    4 Variable: Type IDENTIFIER .
   16 FunctionDef: Type IDENTIFIER . OPLEFTPRNT Formals OPRIGHTPRNT StmtBlock

    OPLEFTPRNT  shift, and go to state 33

    $default  reduce using rule 4 (Variable)


State 30

   19 ClassDef: KEYCLASS IDENTIFIER KEYEXTENDS IDENTIFIER SPLEFTBRACE Fields . SPRIGHTBRACE
   21 Fields: Fields . Field

    SPRIGHTBRACE  shift, and go to state 34
    TYPEVOID      shift, and go to state 12
    TYPEINTEGER   shift, and go to state 13
    TYPEFLOAT     shift, and go to state 14
    TYPEBOOL      shift, and go to state 15
    TYPESTRING    shift, and go to state 16
    KEYCLASS      shift, and go to state 17
    KEYSTATIC     shift, and go to state 18

    VariableDef  go to state 19
    Variable     go to state 20
    Type         go to state 21
    FunctionDef  go to state 22
    Field        go to state 23


State 31

   17 FunctionDef: KEYSTATIC Type IDENTIFIER . OPLEFTPRNT Formals OPRIGHTPRNT StmtBlock

    OPLEFTPRNT  shift, and go to state 35


State 32

   11 Type: Type OPLEFTBRACKET OPRIGHTBRACKET .

    $default  reduce using rule 11 (Type)


State 33

   16 FunctionDef: Type IDENTIFIER OPLEFTPRNT . Formals OPRIGHTPRNT StmtBlock

    TYPEVOID     shift, and go to state 12
    TYPEINTEGER  shift, and go to state 13
    TYPEFLOAT    shift, and go to state 14
    TYPEBOOL     shift, and go to state 15
    TYPESTRING   shift, and go to state 16
    KEYCLASS     shift, and go to state 17

    $default  reduce using rule 14 (Formals)

    Variable   go to state 36
    Type       go to state 37
    Variables  go to state 38
    Formals    go to state 39


State 34

   19 ClassDef: KEYCLASS IDENTIFIER KEYEXTENDS IDENTIFIER SPLEFTBRACE Fields SPRIGHTBRACE .

    $default  reduce using rule 19 (ClassDef)


State 35
